edited build.sbt and .jvmopts